--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "init": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "node": "^18.9.1",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
